--- a/index.html
+++ b/index.html
@@ -286,11 +286,11 @@
 	</div>
 
 				<div class="navi">
-					<a href="#home"><img src="img/home.png" style="width:65px;display: block"></a><br>
-					<a href="#aboutme"><img src="img/user.png" style="width:60px;display: block"></a><br>
-					<a href="#port"><img src="img/laptop.png" style="width:60px;display: block"></a><br>
-					<a href="#experience"><img src="img/helmet.png" style="width:60px;display: block"></a><br>
-					<a href="#contact"><img src="img/envelope.png" style="width:60px;display: block"></a><br>
+					<a href="#home"><img class="hvr-pulse-grow" src="img/home.png" style="width:65px;display: block"></a><br>
+					<a href="#aboutme"><img class="hvr-pulse-grow" src="img/user.png" style="width:60px;display: block"></a><br>
+					<a href="#port"><img class="hvr-pulse-grow" src="img/laptop.png" style="width:60px;display: block"></a><br>
+					<a href="#experience"><img class="hvr-pulse-grow" src="img/helmet.png" style="width:60px;display: block"></a><br>
+					<a href="#contact"><img class="hvr-pulse-grow" src="img/envelope.png" style="width:60px;display: block"></a><br>
 				</div>
 
 				
