--- a/index.html
+++ b/index.html
@@ -271,10 +271,10 @@
 			<div class="container-fluid">
 				<div class="row" style="text-align: center">
 					<div class="col-sm-4 col-sm-offset-4">
-					<a href="https://www.youtube.com/channel/UCs-qwEierzLv_5YUQbiBJkg?view_as=subscriber"><img src="img/you.png" width="35" style="margin:10px"></a>
-					<a href="https://www.pinterest.com/nelldugang/"><img src="img/pin.png" width="35" style="margin:10px"></a>
-					<a href="https://www.facebook.com/nhel.tr"><img src="img/fb.png" width="35" style="margin:10px"></a>
-					<a href="https://www.instagram.com/?hl=en"><img src="img/Untitled-4.png" width="35"></a><br>
+					<a target="_blank" href="https://www.youtube.com/channel/UCs-qwEierzLv_5YUQbiBJkg?view_as=subscriber"><img src="img/you.png" width="35" style="margin:10px"></a>
+					<a target="_blank" href="https://www.pinterest.com/nelldugang/"><img src="img/pin.png" width="35" style="margin:10px"></a>
+					<a target="_blank" href="https://www.facebook.com/nhel.tr"><img src="img/fb.png" width="35" style="margin:10px"></a>
+					<a target="_blank" href="https://www.instagram.com/?hl=en"><img src="img/Untitled-4.png" width="35"></a><br>
 					<p style="vertical-align: bottom;line-height: 100px">Copyright © 2018</p>
 				</div>
 			</div>
