--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@
 				<h2>Tourista</h2>
 				<p style="text-align: left">First Capstone Project in Tuitt.
 				Languages used: HTML, CSS with Bootstrap framework</p>
+				<p style="text-align: left">Github link : https://github.com/nelldugang/tourista1</p>
+				
 				
 			</div>
 			<div class="col-sm-4" style="padding-top: 20px">
@@ -150,6 +152,7 @@
 				<h2>DG2 Snow</h2>
 				<p style="text-align: left">Second Capstone Project in Tuitt.
 				Languages used: HTML, CSS, Javascript, PHP and MySQL database, with Bootstrap and Javascript Framework</p>
+				<p style="text-align: left">https://github.com/nelldugang/dg2</p>
 			</div>
 			<div class="col-sm-4" style="padding-top: 20px">
 				<a href="https://niceink.000webhostapp.com/" target="_blank">
@@ -158,7 +161,7 @@
 				<h2>In-progress</h2>
 				<p style="text-align: left">Third Capstone Project in Tuitt.
 				Languages used: HTML, CSS, Javascript, and MySQL database, with Bootstrap, Javascript, Laravel Framework</p>
-
+				<p style="text-align: left">Github link : https://github.com/nelldugang/inked</p> 
 			</div>
 		</div>
 		<br><br><br><br>
