Update in progress
Updated 3rd project

--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
 			</div>
 			<div class="col-sm-4" style="padding-top: 20px">
 				<a href="https://niceink.000webhostapp.com/" target="_blank">
-				<img src="img/inked.jpg" width="350" style="border-radius: 3px; border: 10px solid #b52b4a">
+				<img src="img/inked.jpg" width="350" style="border-radius: 3px; border: 10px solid teal">
 				</a>
-				<h2>In-progress</h2>
+				<h2>Inked</h2>
 				<p style="text-align: left">Third Capstone Project in Tuitt.
 				Languages used: HTML, CSS, Javascript, and MySQL database, with Bootstrap, Javascript, Laravel Framework.
 				Github <a target="_blank" href="https://github.com/nelldugang/inked"><strong>link</strong></a>.</p> 
