--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 		<div class="row" style="text-align: center">
 			<div class="col-sm-4" style="padding-top: 20px">
 				<a href="https://nelldugang.github.io/tourista1/capstone1.html" target="_blank">
-				<img src="img/portpo1.jpg" width="350" style="border-radius: 3px; border: 10px solid teal"></a>	
+				<img src="img/portpo1.jpg" width="350" style="border-radius: 3px; border: 10px solid #b52b4a"></a>	
 				<!-- <img src="img/portpo1.5.jpg" width="130" style="border-radius: 3px;"></a> -->
 				<h2>Tourista</h2>
 				<p style="text-align: left">First Capstone Project in Tuitt.
@@ -147,7 +147,7 @@
 			</div>
 			<div class="col-sm-4" style="padding-top: 20px">
 				<a href="https://dg2.000webhostapp.com/index.php" target="_blank">
-				<img src="img/portpo2.jpg" width="350" style="border-radius: 3px; border: 10px solid teal">
+				<img src="img/portpo2.jpg" width="350" style="border-radius: 3px; border: 10px solid #b52b4a">
 				<!-- <img src="img/portpo2.5.jpg" width="143" style="border-radius: 3px;"> -->
 				</a>
 				<h2>DG2 Snow</h2>
@@ -158,7 +158,7 @@
 			</div>
 			<div class="col-sm-4" style="padding-top: 20px">
 				<a href="https://niceink.000webhostapp.com/" target="_blank">
-				<img src="img/inked.jpg" width="350" style="border-radius: 3px; border: 10px solid teal">
+				<img src="img/inked.jpg" width="350" style="border-radius: 3px; border: 10px solid #b52b4a">
 				</a>
 				<h2>Inked</h2>
 				<p style="text-align: left">Third Capstone Project in Tuitt.
