--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
 				<img src="img/portpo1.jpg" width="350" style="border-radius: 3px; border: 10px solid #b52b4a"></a>	
 				<!-- <img src="img/portpo1.5.jpg" width="130" style="border-radius: 3px;"></a> -->
 				<h2>Tourista</h2>
+				<p style="text-align: left">A travel blog cataloging adventures, and some guides on how to make travels cheaper with booking flights</p>
 				<p style="text-align: left">First Capstone Project in Tuitt.
 				Languages used: HTML, CSS with Bootstrap framework. Github
 					<a target="_blank" href="https://github.com/nelldugang/tourista1"><strong>link</strong></a>.</p>
@@ -151,6 +152,7 @@
 				<!-- <img src="img/portpo2.5.jpg" width="143" style="border-radius: 3px;"> -->
 				</a>
 				<h2>DG2 Snow</h2>
+				<p style="text-align: left">An E-commerce website. Do you love snowboarding? So do we, visit now to check snowboarding gears.</p>
 				<p style="text-align: left">Second Capstone Project in Tuitt.
 				Languages used: HTML, CSS, Javascript, PHP and MySQL database, with Bootstrap and Javascript Framework.
 				Github <a target="_blank" href="https://github.com/nelldugang/dg2"><strong>link</strong></a>.</p>
@@ -161,6 +163,7 @@
 				<img src="img/inked.jpg" width="350" style="border-radius: 3px; border: 10px solid #b52b4a">
 				</a>
 				<h2>Inked</h2>
+				<p style="text-align: left">A tattoo blog. This blog is for people with tattoos and want to have tattoos in the future.</p>
 				<p style="text-align: left">Third Capstone Project in Tuitt.
 				Languages used: HTML, CSS, Javascript, and MySQL database, with Bootstrap, Javascript, Laravel Framework.
 				Github <a target="_blank" href="https://github.com/nelldugang/inked"><strong>link</strong></a>.</p> 
