--- a/index.html
+++ b/index.html
@@ -156,6 +156,9 @@
 				<p style="text-align: left">Second Capstone Project in Tuitt.
 				Languages used: HTML, CSS, Javascript, PHP and MySQL database, with Bootstrap and Javascript Framework.
 				Github <a target="_blank" href="https://github.com/nelldugang/dg2"><strong>link</strong></a>.</p>
+				<p style="text-align: left">For Testing: (delete and edit products are temporarily disabled, you can add products instead</p>
+				<p style="text-align: left">Username : admin</p>
+				<p style="text-align: left">Password : 1234</p>
 				
 			</div>
 			<div class="col-sm-4" style="padding-top: 20px">
@@ -167,6 +170,9 @@
 				<p style="text-align: left">Third Capstone Project in Tuitt.
 				Languages used: HTML, CSS, Javascript, and MySQL database, with Bootstrap, Javascript, Laravel Framework.
 				Github <a target="_blank" href="https://github.com/nelldugang/inked"><strong>link</strong></a>.</p> 
+				<p style="text-align: left">For Testing, (delete and edit articles are temporarily disabled, you can add articles instead</p>
+				<p style="text-align: left">Username : admin</p>
+				<p style="text-align: left">Password : test1234</p>
 			</div>
 		</div>
 		<br><br><br><br>
