--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
 
 
 
-	<div class="container" id="port" style="">
-		<br><br><br>
+	<div class="container" style="">
+		<br><br><br id="port">
 		<h1 class="huge" style="text-align: center;">Projects</h1>
 		<div class="row" style="text-align: center">
 			<div class="col-sm-4" style="padding-top: 20px">
