--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
 
 
 
-	<div class="container" style="">
-		<br><br><br id="port">
+	<div class="container" style="" id="port">
+		<br><br><br>
 		<h1 class="huge" style="text-align: center;">Projects</h1>
 		<div class="row" style="text-align: center">
 			<div class="col-sm-4" style="padding-top: 20px">
@@ -257,7 +257,7 @@
 
 
 	<div class="container" style="text-align: center;padding-top: 50px;outline: none">
-		<h1 class="huge" id="contact">Send me a message</h1>
+		<h1 class="huge">Send me a message</h1>
 	<a class="modalbtn" href="#myModal" id="contact" data-target="#myModal" data-toggle="modal"><img src="img/message.png" width="100" style="margin:100px;outline: none"></a> 
 	</div>
 
