--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
 		<h1 class="huge" style="text-align: center;">Projects</h1>
 		<div class="row" style="text-align: center">
 			<div class="col-sm-4" style="padding-top: 20px">
-				<a class="modalbtn" href="#firstport" id="contact" data-target="#firstport" data-toggle="modal">
+				<a class="modalbtn" href="#firstport" data-target="#firstport" data-toggle="modal">
 				<img src="img/portpo1.jpg" width="350" style="border-radius: 3px; border: 10px solid #b52b4a"></a>	
 				<!-- <img src="img/portpo1.5.jpg" width="130" style="border-radius: 3px;"></a> -->
 				<h2>Tourista</h2>
 				<p>A travel blog cataloging adventures, and some guides on how to make travels cheaper with booking flights</p>
 			</div>
 			<div class="col-sm-4" style="padding-top: 20px">
-				<a class="modalbtn" href="#secondport" id="contact" data-target="#secondport" data-toggle="modal">
+				<a class="modalbtn" href="#secondport" data-target="#secondport" data-toggle="modal">
 				<img src="img/portpo2.jpg" width="350" style="border-radius: 3px; border: 10px solid #b52b4a">
 				<!-- <img src="img/portpo2.5.jpg" width="143" style="border-radius: 3px;"> -->
 				</a>
@@ -149,7 +149,7 @@
 				<p>An E-commerce website. Do you love snowboarding? So do we, visit now to check snowboarding gears.</p>	
 			</div>
 			<div class="col-sm-4" style="padding-top: 20px">
-				<a class="modalbtn" href="#thirdport" id="contact" data-target="#thirdport" data-toggle="modal">
+				<a class="modalbtn" href="#thirdport" data-target="#thirdport" data-toggle="modal">
 				<img src="img/inked.jpg" width="350" style="border-radius: 3px; border: 10px solid #b52b4a">
 				</a>
 				<h2>Inked</h2>
