--- a/index.html
+++ b/index.html
@@ -256,9 +256,9 @@
 
 
 
-	<div class="container" style="text-align: center;padding-top: 50px;outline: none">
+	<div class="container" id="contact" style="text-align: center;padding-top: 50px;outline: none">
 		<h1 class="huge">Send me a message</h1>
-	<a class="modalbtn" href="#myModal" id="contact" data-target="#myModal" data-toggle="modal"><img src="img/message.png" width="100" style="margin:100px;outline: none"></a> 
+	<a class="modalbtn" href="#myModal" data-target="#myModal" data-toggle="modal"><img src="img/message.png" width="100" style="margin:100px;outline: none"></a> 
 	</div>
 
 
