--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 	<div class="modal fade" id="thirdport" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 	  <div class="modal-dialog" role="document" style="background-color: #fffde7">
 	  	<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	  	<h2>In-progress</h2><h4><a href="https://niceink.000webhostapp.com/" target="_blank">Go to Website</a></h4>
+	  	<h2>Inked</h2><h4><a href="https://niceink.000webhostapp.com/" target="_blank">Go to Website</a></h4>
 		<p style="text-align: left">Third Capstone Project in Tuitt.
 		Languages used: HTML, CSS, Javascript, and MySQL database, with Bootstrap, Javascript, Laravel Framework.
 		Github <a target="_blank" href="https://github.com/nelldugang/inked"><strong>link</strong></a>.</p> 
