--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	</head>
 	<body>
 
-	<div class="container-fluid angled1" id="home">
+	<div class="container-fluid angled1" id="home"
 		
 		<!-- Nell -->
 		<div class="container profcont">
@@ -52,14 +52,14 @@
 						</div>
 				</div>
 			</div>
-			<div class="row" style="text-align: center;padding-top:200px">
-				<a href="#port"><span class="glyphicon glyphicon-chevron-down" style="font-size:30px;color:#b52b4a"></span></a>
+			<div class="row" style="text-align: center;padding-top:150px">
+				<img class="divider" src="img/divider.png">
 			</div>
 			<br><br>
 		</div>
 
 	<!-- About --><div id="aboutme"></div>
-	<section class="aboutus" style="background-color: #fffde7;" >
+	<section class="aboutus" style="background-image: url('img/back2.jpg');background-size:contain;height:auto" >
 		<br><br>
 	    <div class="container">
 	      <div class="row">
@@ -122,12 +122,10 @@
 	    <br><br><br>
 	  </section>
 	<!-- aboutend -->
-
-
-
-
-
 	<div class="container" style="" id="port">
+		<div class="row" style="text-align: center;">
+				<img class="divider" src="img/divider.png">
+			</div>
 		<br><br><br>
 		<h1 class="huge" style="text-align: center;">Projects</h1>
 		<div class="row" style="text-align: center">
@@ -193,8 +191,11 @@
 	</div>
 
 	<!--Work Experties start -->
-	  <section class="myexperties" style="background-color: #fffde7"><br><br><br>
+	  <section class="myexperties" style="background-image: url('img/back2.jpg');background-size:contain;height:auto">
 	  	<div class="container" id="experience">
+	  		<div class="row" style="text-align: center;">
+				<img class="divider" src="img/divider.png">
+				<br><br><br>
 	        <div class="heading">
 	        <h1 class="huge" style="text-align: center;">Work Experience</h1>
 	        <h3 style="text-align: center">My previous associations</h3>        
@@ -254,7 +255,8 @@
 
 
 
-	<div class="container" id="contact" style="text-align: center;padding-top: 50px;outline: none">
+	<div class="container" id="contact" style="text-align: center;padding-top: 50px;outline: none"><div class="row" style="text-align: center;">
+				<img class="divider" src="img/divider.png"><br><br>
 		<h1 class="huge">Send me a message</h1>
 	<a class="modalbtn" href="#myModal" data-target="#myModal" data-toggle="modal"><img src="img/message.png" width="100" style="margin:100px;outline: none"></a> 
 	</div>
@@ -312,7 +314,7 @@
 	<!--   </div> -->
 	</div>
 	</div>
-
+			<div style="text-align: center">
 				<div class="navi" onresize="myFunction()">
 					<a class="navicons" href="#home"><img class="hvr-pulse-grow" src="img/home.png" style="width:65px;"></a>
 					<a class="navicons" href="#aboutme"><img class="hvr-pulse-grow" src="img/user.png" style="width:60px;"></a>
@@ -320,7 +322,7 @@
 					<a class="navicons" href="#experience"><img class="hvr-pulse-grow" src="img/helmet.png" style="width:60px;"></a>
 					<a class="navicons" href="#contact"><img class="hvr-pulse-grow" src="img/envelope.png" style="width:60px;"></a>
 				</div>
-
+			</div>
 				
 
 
@@ -335,13 +337,15 @@
            function checkWidth() {
               var windowWidth = $(window).width();
               if (windowWidth <= 500) {
-                  $(".navi").css({'top' : '10px', 'left' : '10%'});
+                  $(".navi").css({'top' : '10px','left' : '10%','position' : 'fixed'});
                   $(".navicons").css({'display':'inline-block','padding':'0'});
+                  $(".divider").css('width','100%');
                   // $(".collapse1").show();
               }
               else {
-                  $(".navi").css({'top' : '20%', 'left' : '10px'});
+                  $(".navi").css({'top' : '20%','position' : 'fixed','left': '10px'});
                   $(".navicons").css({'display':'block','padding':'10px'});
+                  $(".divider").css('width','auto');
                   
               }
            }
