--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
 	    <br><br><br>
 	  </section>
 	<!-- aboutend -->
-	<section style="" id="port">
+	<section style="">
 		<div class="row" style="text-align: center;">
 				<img class="divider" src="img/divider.png">
 			</div>
 		<br><br><br>
-		<h1 class="huge" style="text-align: center;">Projects</h1>
+		<h1 class="huge" id="port" style="text-align: center;">Projects</h1>
 		<div class="row" style="text-align: center">
 			<div class="col-sm-4" style="padding-top: 20px">
 				<a class="modalbtn" href="#firstport" data-target="#firstport" data-toggle="modal">
@@ -367,6 +367,7 @@
 	        'scrollTop': $target.offset().top
 	    }, 1000, 'swing', function () {
 	        window.location.hash = target;
+
 	    });
 	});
 
