--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	            <h4>nell.dugang@gmail.com</h4>
 	            <h4>+63 920 689 4775</h4>
 	            <p>I've been working in the BPO company for 4 years and I realized that designing and coding is what I really like to do. I wanted to apply as a web developer but I didn't have enough skills and experience.
-			    I'm glad that I enrolled myself in a web development training to help me and hone my skills.</p>
+			    I'm glad that I enrolled myself in a web development training to help me improve my skills.</p>
 				<p>I'm enthusiastic learner and self-motivated when it comes to coding. "No matter what you're doing, strive to do it to the best of your ability. Otherwise, it’s not worth doing at all." </p>
 	<p><a role="button" class="btn btn-primary btn-lg" href="https://drive.google.com/file/d/1RMDcaSxzxMns0FBIBb89pRubEomKD0zx/view?usp=sharing" target="_blank">Download Printable Resume</a></p>
 	        </div>
