--- a/index.html
+++ b/index.html
@@ -199,6 +199,18 @@
 	        <h1 class="huge" style="text-align: center;">Work Experience</h1>
 	        <h3 style="text-align: center">My previous associations</h3>        
 	      </div>
+	      	<div class="row media">
+	        	<div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+	            	<div class="expertiesico">
+	                	September, 2018-<br>Present
+	                </div>
+	            </div>
+	        	<div class="expertiesdesc col-xs-12 col-sm-9 col-md-9 col-lg-8">
+	            	<h4>Silkroad International Inc.</h4>
+	                <h5>Technical Consultant (Front End Developer)</h5>
+	                <p>Creates web based forms for existing clients using Front End Development tools such as HTML, CSS, Bootstrap, Javascript, JQuery</p>
+	            </div>
+	        </div>
 		      <div class="row media">
 	        	<div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
 	            	<div class="expertiesico">
